--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,33 +13,28 @@
  */
 
 * {
-  padding: 0;
-  margin: 0;
-  border: 0;
+  font-family: Helvetica;
 }
 
 div.image-wrapper {
-  float: left;
   margin: 0px;
-  margin-top: -6px;
+  height: 700px;
+  width: 700px;
+  margin-top: 100px;
+}
+
+div.image-wrapper img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
 }
 
 div#content {
   margin-left: auto;
   margin-right: auto;
-  width: 1000px;
+  width: 700px;
 }
 
-div#odd {
-  margin-top: 10px;
-  float: left;
-  width: 500px;
-}
 
-div#even {
-  margin-top: 10px;
-  float: left;
-  width: 500px;
 
-}
 
